--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.26.0
   cloud_firestore: ^4.15.7
   firebase_auth: ^4.17.7
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
