--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^4.15.7
   firebase_auth: ^4.17.7
   provider: ^6.1.2
+  firebase_storage: ^11.6.10
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
